[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
description = "Yet Another JSON RPC Crate"
documentation = "https://docs.rs/yajrc"
edition = "2018"
keywords = ["json", "rpc"]
license = "MIT"
name = "yajrc"
readme = "README.md"
repository = "https://github.com/dr-bonez/yajrc"
version = "0.1.0"

[features]
strict = []

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
